# bioimageio-colab

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  Untitled.ipynb  build_and_push.sh  docker-compose.yml  pyproject.toml  requirements-cellpose.txt  requirements-colab.txt  requirements-sam.txt  requirements.txt  requirements_test.txt  start_service.sh
.ipynb_checkpoints/: requirements-checkpoint.txt
bioimageio_colab/: __init__.py  __main__.py  annotation_server.py  bioengine_app.py  clean_up_dangling_services.py  create_workspace.py  create_workspace_token.py  data_provider.py  example_image.npy  example_image.tif  generate_token.py  hypha_data_store.py  onnx_mask_decoder.py  onnx_runtime.py  precompute_embedding.py  precompute_example_images.py  register_sam_service.py  sam.py  sam_annotation_server.py  sam_server.py  sam_service.py  segmentation_model.py
bioimageio_colab_server/: annotation_server.py  hypha_data_store.py  model_server.py  service_config.json
chatbot_extension/: data_provider_extension.py
data/: save_embedding_buffer.py
docker/: Dockerfile
docs/: data-providing-service.py  data_providing_service.py  data_service.py  index.html  provide_images.py  pyodide-worker.js  services.py  worker-manager.js
notebooks/: BioImageIOCrowdSourcing.ipynb  BioImageIOCrowdSourcing_CellposeFinetune.ipynb  BioImageIO_Colab_CellPose_finetuning.ipynb  KaibuInterface.ipynb  config.yaml  configuration.yaml
plugins/: bioimageio-colab-annotator.imjoy.html  bioimageio-colab-client.imjoy.html  bioimageio-colab-provider.imjoy.html  bioimageio-colab-sam-annotation.imjoy.html  bioimageio-colab-sam.imjoy.html  bioimageio-colab.imjoy.html  mask-decoder.js  onnx-mask-decoder.js
scripts/: build_and_push.sh  check_liveness.sh  check_readiness.sh  start_service.sh
test/: stress_test.py  test_sam.py  (+4 more)
(+22 files in other folders)
