[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bioimageio-colab"
version = "0.2.12"
readme = "README.md"
description = "Collaborative image annotation and model training with human in the loop."
dependencies = [
  "hypha-rpc",
  "kaibu-utils",
  "numpy",
  "python-dotenv",
  "ray[serve]",
  "tifffile",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bioimageio_colab*"]
exclude = ["tests*"]

[options.entry_points]
console_scripts = [
    "bioimageio-colab = bioimageio_colab.__main__:main",
]
